fixing button action on ios devices

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -65,3 +65,6 @@ a:hover {
 nav {
   font-variant: small-caps;
 }
+[role="button"] {
+  cursor: pointer;
+}
